@@ -5,6 +5,7 @@ import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import com.vst.booking.conveter.BookingConveter;
 import com.vst.booking.dto.BookingDto;
@@ -13,8 +14,8 @@ import com.vst.booking.exception.IdNotAcceptableException;
 import com.vst.booking.model.Booking;
 import com.vst.booking.repository.BookingRepository;
 
-import jakarta.transaction.Transactional;
-import jakarta.validation.Valid;
+
+
 
 @Service
 public class BookingServiceImpl implements BookingServiceInterface {
@@ -31,12 +32,13 @@ public class BookingServiceImpl implements BookingServiceInterface {
 	private String string = "Please Enter Vaild ID";
 
 	@Override
-	public void add(BookingDto bookingDto) {
+	public String add(BookingDto bookingDto) {
 
 		bookingDto.setBookingId(bookingSeqGenService.idGen());
 		bookingDto.setActive(true);
 		Booking booking = bookingConveter.dtoToEntity(bookingDto);
 		bookingRepository.save(booking);
+		return "Data added";
 	}
 
 	@Override
@@ -52,7 +54,7 @@ public class BookingServiceImpl implements BookingServiceInterface {
 	@Override
 	public Booking show(String bookingId) {
 
-		if (!bookingId.trim().isEmpty()) {
+		if (!bookingId.isBlank()) {
 			Booking obj = bookingRepository.findByBookingIdAndIsActiveTrue(bookingId);
 			if (obj != null) {
 				return obj;
@@ -65,56 +67,56 @@ public class BookingServiceImpl implements BookingServiceInterface {
 	}
 
 	@Override
-	public void edit(String bookingId, @Valid BookingDto bookingDto) {
+	public void edit(String bookingId,BookingDto bookingDto) {
 
 		if (!bookingId.trim().isEmpty()) {
 			Booking obj = bookingRepository.findByBookingIdAndIsActiveTrue(bookingId);
 			Booking booking = bookingConveter.dtoToEntity(bookingDto);
 			if (obj != null) {
 
-				if (!booking.getBookingType().trim().isEmpty())
+				if (!booking.getBookingType().isBlank())
 					obj.setBookingType(booking.getBookingType());
 
-				if (!booking.getBookingHostId().trim().isEmpty())
+				if (!booking.getBookingHostId().isBlank())
 					obj.setBookingHostId(booking.getBookingHostId());
 
-				if (!booking.getBookingCustomerId().trim().isEmpty())
+				if (!booking.getBookingCustomerId().isBlank())
 					obj.setBookingCustomerId(booking.getBookingCustomerId());
 
-				if (!booking.getBookingVendorId().trim().isEmpty())
+				if (!booking.getBookingVendorId().isBlank())
 					obj.setBookingVendorId(booking.getBookingVendorId());
 
-				if (!booking.getBookingStationId().trim().isEmpty())
+				if (!booking.getBookingStationId().isBlank())
 					obj.setBookingStationId(booking.getBookingStationId());
 
-				if (!booking.getBookingDate().trim().isEmpty())
+				if (!booking.getBookingDate().isBlank())
 					obj.setBookingDate(booking.getBookingDate());
 
-				if (!booking.getBookingTime().trim().isEmpty())
+				if (!booking.getBookingTime().isBlank())
 					obj.setBookingTime(booking.getBookingTime());
 
-				if (!bookingDto.getBookingCancellationReason().trim().isEmpty())
+				if (!bookingDto.getBookingCancellationReason().isBlank())
 					obj.setBookingCancellationReason(booking.getBookingCancellationReason());
 
-				if (!booking.getBookingStatus().trim().isEmpty())
+				if (!booking.getBookingStatus().isBlank())
 					obj.setBookingStatus(booking.getBookingStatus());
 
-				if (!booking.getBookingReqDate().trim().isEmpty())
+				if (!booking.getBookingReqDate().isBlank())
 					obj.setBookingReqDate(booking.getBookingReqDate());
 
-				if (!booking.getBookingCancellationReqDate().trim().isEmpty())
+				if (!booking.getBookingCancellationReqDate().isBlank())
 					obj.setBookingCancellationReqDate(booking.getBookingCancellationReqDate());
 
-				if (!booking.getCreatedDate().trim().isEmpty())
+				if (!booking.getCreatedDate().isBlank())
 					obj.setCreatedDate(booking.getCreatedDate());
 
-				if (!booking.getModifiedDate().trim().isEmpty())
+				if (!booking.getModifiedDate().isBlank())
 					obj.setModifiedDate(booking.getModifiedDate());
 
-				if (!booking.getCreatedBy().trim().isEmpty())
+				if (!booking.getCreatedBy().isBlank())
 					obj.setCreatedBy(booking.getCreatedBy());
 
-				if (!booking.getModifiedBy().trim().isEmpty())
+				if (!booking.getModifiedBy().isBlank())
 					obj.setModifiedBy(booking.getModifiedBy());
 
 				bookingRepository.save(obj);
